[tool.poetry]
name = "rainbowlive_gif_tagger"
version = "0.1.0"
description = ""
authors = ["sakuramochi <sakuramochi.mochi.0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-extensions = "^3.0.2"
django-filter = "^2.3.0"
django-material = "^1.6.7"
django-viewflow = "^1.6.1"
pytz = "^2020.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
